# mypromptdaily

./: .env.example  .gitignore  README.md  daily_schedule.py  pyproject.toml  requirements.txt  schedule_admin.py  scheduled_workflow.py  setup_daily_schedule.py  workflow.py
.github/workflows/: python-package.yml  release.yml
mypromptdaily/: cli.py
